--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "cpriego/valet-linux",
-    "description": "A more enjoyable local development experience for Linux.",
+    "name": "valeryan/valet-wsl",
+    "description": "A more enjoyable local development experience for Windows Subsystem for Linux.",
     "keywords": ["laravel", "zonda", "wwdhhd", "ubuntu", "fedora"],
     "license": "MIT",
     "authors": [
@@ -19,6 +19,10 @@
         {
             "name": "Leonardo Nodari",
             "email": "nodarileonardo@gmail.com"
+        },
+        {
+            "name": "Samuel Hilson",
+            "email": "samrhilson@gmail.com"
         }
     ],
     "autoload": {
